initail commit availability

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -68,3 +68,19 @@
 	url = {http://emag.iis.ru/arc/infosoc/emag.nsf/BPA/9191949adeb83654c32575be0039f17c},
 	urldate = {2020-04-20}
 }
+
+@online{PostrgreSQL,
+    url = {https://www.postgresql.org/docs/},
+    urldate = {2020-05-20}
+}
+
+@online{oracle,
+    url = {https://www.oracle.com/ru/database/},
+    urldate = {2020-05-21}
+}
+    
+@online{casandra,
+    url = {https://cassandra.apache.org},
+    urldate = {2020-05-22}
+}
+    
