--- a/db.tex
+++ b/db.tex
@@ -16,7 +16,7 @@
 %\input{part/basis}
 %\input{part/integrity}
 %\input{part/confidentiality}
-%\input{part/availability}
+\input{part/availability}
 \input{part/distributed}
 %\input{part/statistical}
 %\input{part/intrusion}
