Main part of SDB

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,7 +29,7 @@
 }
 
 @book{Smirnov2007,
-	author    = {Смирнов}, 
+	author    = {Смирнов},
 	title     = {{Безопасность систем баз данных}},
 	publisher = {Гелиос АРВ},
 	year      = 2007,
@@ -45,3 +45,21 @@
     urldate = {2020-03-01},
     year={2011}
 }
+
+@book{ComputerSecurity2008,
+	author    = {Lawrie Brown},
+	author		= {William Stallings}
+	title     = {Computer Security: Principles and Practice},
+	publisher = {Pearson},
+	year      = 2008,
+	isbn      = {9780134794105},}
+
+@article{SDB1989,
+		author = {NABIL R. ADAM},
+		author = {JOHN C. WORTMANN},
+		journal = {ACM Computing Surveys, Vol. 21,},
+		number = {4},
+		year = {1989},
+		title = {Security-Control Methods for Statistical Databases: A Comparative Study},
+		url = {https://dl.acm.org/doi/pdf/10.1145/76894.76895}
+	}
