Add picture and literature source

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -83,3 +83,26 @@
     url = {https://cassandra.apache.org},
     urldate = {2020-05-22}
 }
+
+@book{ComputerSecurity2008,
+	author    = {Lawrie Brown, William Stallings},
+	title     = {{Computer Security Principles and Practice}},
+	publisher = {Pearson},
+	year      = 2008,
+	isbn      = {9780134794105},}
+
+@article{SDB1989,
+	author = {NABIL R. ADAM, JOHN C. WORTMANN},
+	journal = {ACM Computing Surveys, Vol. 21,},
+	number = {4},
+	year = {1989},
+	title = {Security-Control Methods for Statistical Databases: A Comparative Study},
+	url = {https://dl.acm.org/doi/pdf/10.1145/76894.76895}
+	}
+
+@book{IntroBD2014
+	author    = {{Дейт К. Дж. }},
+	title     = {{Введение в системы баз данных [7 издание]}},
+	publisher = {Уфимский Государственный Авиационный Технический Университет},
+	year      = 2014,
+	}
