--- a/part/statistical.tex
+++ b/part/statistical.tex
@@ -1,19 +1,19 @@
 \section{Безопасность в статистических БД}
-\section{Безопасность в статистических БД}
 
-Инфы про статистические базы данных на русском языке мало и большая часть бредовая. Гуглите statistical database. Все источники будут на английском, переведено специально для вас. Источников несколько, под конец была найдена статья, в которой есть вся собранная инфа.
+Инфы про статистические базы данных на русском языке мало и большая часть бредовая. Гуглите statistical database. Все источники будут на английском, переведено специально для вас. Источников несколько \cite{ComputerSecurity2008} \cite{IntroBD2014}, под конец была найдена статья, \cite{SDB1989} в которой есть вся собранная инфа.
 
 \subsection{Общие сведения}.
 Определение статистической БД. Классификация статистических БД. Характеристики статистических БД.
 
 Статистической (в приведенном здесь контексте) называется база данных, в которой допускаются запросы с обобщением данных (суммированием, вычислением среднего значения и т.д.), но не допускаются запросы по отношению к элементарным данным. Например, в статистической базе данных разрешается выдача запроса "Какова средняя зарплата программистов?", тогда как выдача запроса "Какова зарплата программиста Мэри?" запрещена.
 Проблема статистических баз данных заключается в том, что иногда с помощью логических заключений на основе выполнения разрешенных запросов можно вывести ответ, который прямо может быть получен только с помощью запрещенного запроса. "Обобщенные значения содержат следы исходной информации, и она может быть восстановлена злоумышленником после соответствующей обработки этих обобщенных значений. Такой процесс называется логическим выводом конфиденциальной информации".
-Практически для любой статистической базы данных всегда может быть определен общий трекер (в отличие от множества индивидуальных трекеров). Общий трекер (general tracker) — это логическое выражение, которое может быть использовано для поиска ответа на любой запрещенный запрос, т.е. запрос, включающий недопустимое логическое выражение. (В противоположность этому индивидуальный трекер работает только на основе запросов, включающих конкретные запрещенные выражения.) [пример - в источнике 1]
+Практически для любой статистической базы данных всегда может быть определен общий трекер (в отличие от множества индивидуальных трекеров). Общий трекер (general tracker) — это логическое выражение, которое может быть использовано для поиска ответа на любой запрещенный запрос, т.е. запрос, включающий недопустимое логическое выражение. (В противоположность этому индивидуальный трекер работает только на основе запросов, включающих конкретные запрещенные выражения.)
 Требуется поддерживать баланс между репрезентативностью данных и конфиденциальностью отдельных записей.
 
 \subsection{Классификация}
-\begin{itemize}
 Классифицирует по следующим признакам:
+\begin{itemize}
+
     \item Чисто статистическая база данных - Обычная база данных со статистическим доступом
 
 этот тип базы данных хранит только статистические данные. Примером может служить база данных переписи населения.
@@ -35,8 +35,9 @@
 \subsection{Угрозы статистических БД}
 
 Об безопасности в статистических БД  Деннинг [16.6]
-
-"методы нарушения защиты данных просты и не связаны с большими расходами. Поэтому требование обеспечения полной секретности конфиденциальной информации несовместимо с требованием возможности вычисления точных статистических показателей для произвольных подмножеств данных в базе. По крайней мере одно из этих требований должно быть снято прежде, чем можно будет поверить в гарантии обеспечения секретности".
+\begin{grayquote}
+"методы нарушения защиты данных просты и не связаны с большими расходами. Поэтому требование обеспечения полной секретности конфиденциальной информации несовместимо с требованием возможности вычисления точных статистических показателей для произвольных подмножеств данных в базе. По крайней мере одно из этих требований должно быть снято прежде, чем можно будет поверить в гарантии обеспечения секретности.
+\end{grayquote}
 То есть существует мнение, что нельзя нормально обезопасить СБД.
 
 Основная проблема СБД -- проблема вывода.
@@ -62,8 +63,13 @@
 	\item возмущение данных;
 	\item возмущение вывода;
 \end{itemize}
-На рисунке изображена схема 3 подходов.
-
+На рисунке \ref{fig:SDB_secure} изображена схема 3 подходов.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/SDB_secure_method.png}
+    \caption{Схемы безопасности СДБ}
+    \label{fig:SDB_secure}
+\end{figure}
 \paragraph{Концептуальный}
 
 Основная проблема в том, что вся реляционная алгебра позволяет выводить индивидуальные данные. Концептуальный подход предлагает заменить классическую систему реляционной БД работающую с индивидуальными данными.
@@ -78,9 +84,9 @@ Access Restriction - пусть вы доктор, тогда вам можно 
 
 \paragraph{Ограничение запросов}
 
-Query Set Restriction - Ограничение на минимальный размер выдаваемой выборки.
+Query Set Restriction -- Ограничение на минимальный размер выдаваемой выборки.
 
-Limiting intersection of query sets -  Метод защиты блокирует такие запросы которые приводят к выводу данных через пересечение множеств запросов.
+Limiting intersection of query sets --  Метод защиты блокирует такие запросы которые приводят к выводу данных через пересечение множеств запросов.
 Сохранение исторических сведений о результатах выполнения запросов и отклонение любых запросов, использующих значительное количество исходных данных, обработанных предыдущим запросом.
 Auditing - ведём логи, ловим негодяев и всяких подознительных
 
