one fucking comma, but all will not compile

--- a/db.tex
+++ b/db.tex
@@ -18,7 +18,7 @@
 %\input{part/confidentiality}
 \input{part/availability}
 \input{part/distributed}
-%\input{part/statistical}
+\input{part/statistical}
 %\input{part/intrusion}
 %\input{part/security}
 %\input{part/ref}
