--- a/bibliography.bib
+++ b/bibliography.bib
@@ -100,8 +100,8 @@
 	url = {https://dl.acm.org/doi/pdf/10.1145/76894.76895}
 	}
 
-@book{IntroBD2014
-	author    = {{Дейт К. Дж. }},
+@book{IntroBD2014,
+	author    = {{Дейт К. Дж.}},
 	title     = {{Введение в системы баз данных [7 издание]}},
 	publisher = {Уфимский Государственный Авиационный Технический Университет},
 	year      = 2014,
